<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/button_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/but_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Edit" />

            <Button
                android:id="@+id/but_del"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delete" />
            <Button
                android:id="@+id/but_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select"/>


        </LinearLayout>

        <TextView
            android:id="@+id/note_short"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="8"
            android:text="Short note description"
            android:visibility="visible"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_container"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/note_full"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Full note description"
            android:layout_marginTop="2dp"
            android:visibility="gone"

            app:layout_constraintTop_toBottomOf="@id/note_short"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_container"
            android:layout_marginEnd="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>