<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <SearchView
        android:id="@+id/search_view"
        android:layout_width="201dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="31dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/add_n"
        android:layout_width="135dp"
        android:layout_height="50dp"
        android:text="добавить"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toEndOf="@+id/search_view"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_marginTop="455dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_view" />

</androidx.constraintlayout.widget.ConstraintLayout>